# python_2

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
python_proj_2/: __init__.py  dataset.py  features.py  plots.py
python_proj_2/logistic_regression/: logistic_reg.py  main.py
python_proj_2/modeling/: predict.py  train.py
python_proj_2/some_entities_file/: data_params.py  pipeline_params.py  train_params.py
python_proj_2/tests/: conftest.py  test_params.yaml  test_params_loading.py
